@@ -3,6 +3,7 @@
 - Clock to music vis
 - Fix for always on osd info to not show when seeking
 - Allow AEL views.
+- Fix for browse/play in info dialog
 
 0.9.51
 - Add fanart gallery fullscreen viewer
